Version 10.9 changed the NewsLetter font color to white, added setTimeout to all window.scroll() functions for better scrolling, fixed an error when scrolling images from ImageSlider on small screens, now it should scroll like how it should

--- a/src/styles/components/ImageSlider.scss
+++ b/src/styles/components/ImageSlider.scss
@@ -9,16 +9,18 @@
     flex-direction: row;
     width: 100%;
     overflow: hidden;
+    
     &__imges {
       width: 100%;
       flex-shrink: 0;
 
       & img {
         width: 100%;
-        // aspect-ratio: 2.39 / 1;
-        aspect-ratio: 16 / 9;
         object-fit: cover;
         object-position: center;
+        aspect-ratio: 16 / 9;
+        @include w.breakpoint-up(large) {aspect-ratio: 2.39 / 1}
+        @include w.breakpoint-up(xlarge) {aspect-ratio: 2.5 / 1}
       }      
     }
   }
