--- a/src/styles/components/NewsLetter.scss
+++ b/src/styles/components/NewsLetter.scss
@@ -5,7 +5,7 @@
   width: 100%;
   aspect-ratio: 2 / 3;
   // background-image: -webkit-gradient(linear, left top, left bottom, from(#001e3d3e), to(#5ca7f15a)), url('/src/assets/Img/Content/Giant and Snow.jpg');
-  background-image: linear-gradient(to bottom, var(--background-color) 0%, hsla(0, 0%, 100%, 0.393) 35%, hsla(218, 100%, 16%, 0.187) 100%), url('/assets/img/content/Giant and Snow.jpg');
+  background-image: linear-gradient(to bottom, var(--background-color) 0%, hsla(0, 0%, 0%, 0.1) 35%, hsla(218, 100%, 16%, 0.187) 100%), url('/assets/img/content/Giant and Snow.jpg');
   // background-image: linear-gradient(to bottom, hsl(0, 0%, 100%) 0%, hsla(191, 100%, 11%, 0.376) 35%, hsla(210, 100%, 83%, 0.286) 100%), url('/src/assets/Img/Content/Giant and Snow.jpg');
   // background-image: -webkit-gradient(linear, left top, left bottom, from(#001e3d41), to(#5090d05e)), url('/src/assets/Img/Content/bicycle and syria flag poster.jpg');
   // background-image: -webkit-gradient(linear, left top, left bottom, from(#001e3d5e), to(#5090d055)), url('/src/assets/Img/Content/bicycle background.jpg');
@@ -81,7 +81,8 @@
       max-width: 80%;
       margin-bottom: auto;
       font-weight: 600;
-      color: black;
+      color: white;
+      line-height: 1.3em;
 
       @include w.breakpoint-up(medium) {
         margin-block: auto;
@@ -102,8 +103,8 @@
       }
 
       & .firstLetter {
-        // color: #B8D1E0;
-        color: #4B6D90;
+        color: #B8D1E0;
+        // color: #4B6D90;
         font-size: 1.8em;
       }
     }
@@ -112,7 +113,7 @@
       grid-area: paragraph;
       font-weight: bold;
       font-size: 0.9em;
-      color: black;
+      color: white;
       margin-top: auto;
 
       @include w.breakpoint-up(medium) {
